# gbqn2sql

./: .env.example  .gitignore  README.md  SETUP_README.md  pyproject.toml  requirements.txt  setup-copilot-instructions.md  setup.py
src/: usersetup.py
src/bq/: BQKnowledgeGraphContextBuilder.py  BQKnowledgeGraphGenerator.py  GBQ_KGVisualizer.py  GBQ_Streamlit_App.py  GeminiAccessTest.py  GeminiKGText2SQL.py  GeminiText2SQL.py  InsuranceBigQueryDB.PY  ontology_views.py
